Fix for Chrome for box shadow on tbody element.
Apparently Chrome adds 1px white space between border and pseudo element after's box shadow so pseudo style is used on ".td.column" and ".td.swimlane-header" instead.

--- a/themes/oxygen/css/oxygen.css
+++ b/themes/oxygen/css/oxygen.css
@@ -3538,6 +3538,7 @@ h3 .dropdown_box a, h3 .dropdown_box a:hover { font-size: 0.7em; text-transform:
 .whiteboard-columns .td {
     width: auto;
     padding: 0;
+    position: relative;
     box-sizing: border-box;
     -o-box-sizing: border-box;
     -ms-box-sizing: border-box;
@@ -3722,13 +3723,15 @@ h3 .dropdown_box a, h3 .dropdown_box a:hover { font-size: 0.7em; text-transform:
     box-shadow: 0 6px 8px -8px rgba(50, 50, 50, 0.3);
     position: relative;
 }
-.whiteboard-columns .tbody:after {
+.whiteboard-columns .tbody .td.column:before,
+.whiteboard-columns .tbody.collapsed .td.swimlane-header:before {
     content: '';
     display: block;
     width: 100%;
     height: 8px;
     position: absolute;
     box-shadow: inset 0 6px 8px -8px rgba(50, 50, 50, 0.3);
+    top: 100%;
 }
 .whiteboard-columns.swimlanes tbody td.swimlane-header,
 .whiteboard-columns.swimlanes .tbody .td.swimlane-header {
